--- a/views/new.ejs
+++ b/views/new.ejs
@@ -36,10 +36,10 @@
 
 <!-- form  -->
 <div class="form-class">
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Enter Image Url</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" name="img" aria-describedby="emailHelp">
+      <input type="file" class="form-control" id="exampleInputEmail1" name="img" aria-describedby="emailHelp">
     </div>
 
     <div class="mb-3">
